# keyrunes

./: .env-example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  hurl.env
.github/workflows/: ci.yml
hurl/: admin.hurl  auth.hurl
migrations/: 20250819092538_create_users_table.sql  20250908121827_create_groups_and_policies.sql
src/: lib.rs  main.rs
src/api/: admin.rs  auth.rs  health.rs
src/domain/: user.rs
src/handler/: auth.rs  errors.rs  logging.rs  mod.rs
src/repository/: mod.rs  sqlx_impl.rs
src/services/: group_service.rs  jwt_service.rs  mod.rs  policy_service.rs  user_service.rs
src/views/: auth.rs
templates/: base.html  change_password.html  dashboard.html  login.html  register.html  reset_password.html  welcome.html
templates/errors/: 400.html  403.html  404.html  500.html  503.html
tests/: all_errors_code.rs  sqlx_impl_tests.rs  test_404_error.rs  test_api_and_cli.rs  test_group_and_policy_service.rs  test_jwt_and_health.rs  test_repository_and_handler.rs  test_user_service_complete.rs  user_services_test.rs
