[package]
name = "keyrunes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tera = "1.20"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
argon2 = "0.4"
password-hash = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
regex = "1"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
url = "2.5.4"
dotenvy = "0.15.7"
