[package]
name = "keyrunes"
version = "0.1.0"
edition = "2024"
default-run = "keyrunes"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tera = "1.20"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
argon2 = "0.4"
password-hash = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
regex = "1"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
url = "2.5.4"
dotenvy = "0.15.7"
tracing-subscriber = {  version = "0.3.20", features = ["env-filter"]}
jsonwebtoken = "9.3.1"
serde_with = "3.14.0"
hex = "0.4.3"
futures = "0.3.31"
secrecy = { version = "0.10.3", features = ["serde"] }
tower = "0.5.2"

[dev-dependencies]
test-case = "3.3.1"
rstest = "0.26.1"
proptest = "1.7.0"
tokio-test = "0.4.4"
fake = { version = "2.10", features = ["derive", "chrono", "uuid"] }
criterion = { version = "0.5", features = ["html_reports"] }
